<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#4D80D5" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:gravity="center">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:padding="10dp"
            android:src="@drawable/splashlogo" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/bg_bo_vien">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:src="@drawable/email"
                android:tint="#fff"
                android:padding="15dp"
                android:layout_marginLeft="10dp"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtLayoutEmailReset"
                android:layout_marginBottom="6dp"
                android:layout_marginLeft="63dp"
                android:textSize="30sp"/>
            <EditText
                android:id="@+id/edtemailreset"
                android:layout_width="match_parent"
                android:background="#00FFFFFF"
                android:textSize="20sp"
                android:gravity="center_vertical"
                android:textColor="#fff"
                android:hint="@string/email"
                android:textColorHint="#fff"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:layout_marginLeft="63dp"/>
        </RelativeLayout>
        <Button
            android:id="@+id/btnreset"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/bg_bo_btn"
            android:layout_width="match_parent"
            android:textSize="20sp"
            android:textColor="#fff"
            android:text="@string/reset"
            android:textAllCaps="false"
            android:layout_height="50dp" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingBottom="10dp"
            android:padding="10dp">
            <TextView
                android:id="@+id/txtloginfor"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="#fff"
                android:text="@string/btnLogin"/>
            <TextView
                android:id="@+id/txtsignupfor"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="16sp"
                android:layout_alignParentRight="true"
                android:textColor="#fff"
                android:text="@string/btnSignUp"/>
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>