<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4D80D5">
    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:id="@+id/toolbarAccount"
        android:elevation="1dp"
        app:menu="@menu/menu_account"
        android:layout_height="?attr/actionBarSize">
        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="Account"
            android:layout_height="wrap_content"/>

    </com.google.android.material.appbar.MaterialToolbar>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lobt"
        android:layout_below="@+id/lot"
        android:gravity="center"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:gravity="center_horizontal"
            android:text="Edit Infomation"/>
        <TextView
            android:layout_width="match_parent"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:text="Habib Mhamadi"
            android:id="@+id/txtAccountName"
            android:layout_height="wrap_content"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_bo_vien">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:padding="15dp"
                android:src="@drawable/profile"
                android:tint="#fff" />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtLayoutNameEdit"
                android:layout_marginBottom="6dp"
                android:layout_marginLeft="63dp"
                android:textSize="30sp"/>

            <EditText
                android:id="@+id/edtnameedit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="63dp"
                android:background="#00FFFFFF"
                android:gravity="center_vertical"
                android:hint="@string/name"
                android:textColor="#fff"
                android:textColorHint="#fff"
                android:textSize="20sp" />
        </RelativeLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:background="@drawable/bg_bo_btn"
            android:text="Confirm"
            android:textColor="#fff"
            android:textAllCaps="false"
            android:id="@+id/btnEditAccount"
            android:layout_marginBottom="16dp"
            android:layout_height="50dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:gravity="center_horizontal"
            android:text="Edit Password"
            android:layout_marginBottom="20dp"
            android:layout_margin="20dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_bo_vien">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:padding="15dp"
                android:src="@drawable/locked"
                android:tint="#fff" />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtLayoutOldPassEdit"
                android:layout_marginBottom="6dp"
                android:layout_marginLeft="63dp"
                android:textSize="30sp"/>
            <EditText
                android:id="@+id/edtoldpassedit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="63dp"
                android:background="#00FFFFFF"
                android:gravity="center_vertical"
                android:hint="@string/oldpassedit"
                android:inputType="textPassword"
                android:textColor="#fff"
                android:textColorHint="#fff"
                android:textSize="20sp" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_bo_vien">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:padding="15dp"
                android:src="@drawable/locked"
                android:tint="#fff" />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtLayoutPassEdit"
                android:layout_marginBottom="6dp"
                android:layout_marginLeft="63dp"
                android:textSize="30sp"/>
            <EditText
                android:id="@+id/edtpassedit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="63dp"
                android:background="#00FFFFFF"
                android:gravity="center_vertical"
                android:hint="@string/pass2edit"
                android:inputType="textPassword"
                android:textColor="#fff"
                android:textColorHint="#fff"
                android:textSize="20sp" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_bo_vien">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:padding="15dp"
                android:src="@drawable/locked"
                android:tint="#fff" />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtLayoutPass2Edit"
                android:layout_marginBottom="6dp"
                android:layout_marginLeft="63dp"
                android:textSize="30sp"/>
            <EditText
                android:id="@+id/edtpass2edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="63dp"
                android:background="#00FFFFFF"
                android:gravity="center_vertical"
                android:hint="@string/pass2edit2"
                android:inputType="textPassword"
                android:textColor="#fff"
                android:textColorHint="#fff"
                android:textSize="20sp" />
        </RelativeLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:background="@drawable/bg_bo_btn"
            android:text="Confirm"
            android:textColor="#fff"
            android:textAllCaps="false"
            android:id="@+id/btnEditPass"
            android:layout_marginBottom="16dp"
            android:layout_height="50dp"/>
    </LinearLayout>

</RelativeLayout>